--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/xfavicon" href="-img/79ec0efae164833b0ed42d7132aef46e-spring-sunglasses-icon.webp  ">
-    <title>Tudo sobre o Google Glass</title>
+    <title>Google Glass: Realidade Aumentada ao Seu Olhar</title>
 </head>
 
 <body>
@@ -17,12 +17,17 @@
                 <h2>A revolução do Google está chegando </h2>
             </hgroup>
             <img src="-img/oculos-google.png" alt="">
-            Menu Principal
-            -Home
-            -Especificações
-            -Fotos
-            -Multímidia
-            -Fale conosco
+            <nav id="Menu">
+               
+           <h1> Menu Principal</h1>
+           <ul  >
+          <li> <a href="index.html"> Home</a></li>
+          <li>  <a href="espec.html">Especificações</a></li>
+        <li> <a href="fotos.html">Fotos</a></li>
+           <li> <a href="multmida.html">Multímidia</a></li>
+        <li> <a href="fale.html"> Fale conosco</a>  </li>
+               </ul>
+        </nav>
         </header>
         <hgroup>
             <h3>Tecnologia > Inovações</h3>
@@ -32,7 +37,7 @@
         </hgroup>
         <h2>O que é </h2>
 
-        <p>O <b>Google Glass </b> é um dispositivo vestível desenvolvido pelo Google,
+        <p>O <a href="https://www.google.com/glass/photography/ " target="_blank">Google Glass </a> é um dispositivo vestível desenvolvido pelo Google,
             que se assemelha a um par de óculos. Ele possui uma pequena tela na parte superior direita,
             que exibe informações e permite a interação com o usuário por meio de comandos de voz ou toques na armação.
             A ideia é oferecer uma experiência de realidade aumentada, permitindo que o usuário acesse informações,
@@ -100,13 +105,13 @@
        foi reforçado, oferecendo uma estrutura mais robusta e resistente, ideal para o uso em indústrias,
         hospitais e outros setores profissionais.
 
-    A bateria também foi melhorada, agora oferecendo até 8 horas de uso contínuo, o que é ideal
+        <b> A bateria também foi melhorada, agora oferecendo até 8 horas de uso contínuo</b>, o que é ideal
      para turnos de trabalho mais longos. A câmera foi atualizada para 8 MP, garantindo melhor
       qualidade nas imagens e vídeos, especialmente para tarefas como inspeções e documentações. 
       Em termos de conectividade, o Google Glass passou a ser compatível com Wi-Fi 802.11ac e Bluetooth
        4.0, proporcionando uma conexão mais rápida e estável.
     
-    Além disso, o dispositivo tem sido cada vez mais integrado a aplicações empresariais, como soluções de 
+    Além disso,  <b>o dispositivo tem sido cada vez mais integrado a aplicações empresariais </b> , como soluções de 
     realidade aumentada para treinamento, assistência remota para técnicos e gestão de inventário em tempo
      real. Essas melhorias e inovações têm tornado o Google Glass uma ferramenta mais útil 
      e eficiente, especialmente para setores como saúde, logística e manufatura.</p>
