--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>Google Glass</h1>
                 <h2>A revolução do Google está chegando </h2>
             </hgroup>
-            <img src="-img/oculos-google.png" alt="">
+            <img id="icone"       src="-img/oculos-google.png" alt="">
             <nav id="Menu">
                
            <h1> Menu Principal</h1>
