--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Rubik+Bubbles&display=swap" rel="stylesheet">
     <link rel="icon" type="image/xfavicon" href="-img/79ec0efae164833b0ed42d7132aef46e-spring-sunglasses-icon.webp  ">
+  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Emblema+One&display=swap" rel="stylesheet">
+  
+  
     <title>Google Glass: Realidade Aumentada ao Seu Olhar</title>
 </head>
 
@@ -16,7 +26,7 @@
                 <h1>Google Glass</h1>
                 <h2>A revolução do Google está chegando </h2>
             </hgroup>
-            <img id="icone"       src="-img/oculos-google.png" alt="">
+            <img id="icone" src="-img/oculos-google.png" alt="">
             <nav id="Menu">
                
            <h1> Menu Principal</h1>
@@ -30,7 +40,7 @@
         </nav>
         </header>
         <hgroup>
-            <h3>Tecnologia > Inovações</h3>
+      
             <h1>Saiba tudo sobre o Google Glass</h1>
             <h2>por Sérgio Vinícius</h2>
             <h3>Atualizado em 1 de fevereiro de 2025</h 3>
